--- a/config.yml
+++ b/config.yml
@@ -2,7 +2,7 @@
 # If whitelist is set to true, only the channels you specify will be linked.
 # If it is set to false, all of the channels except the ones you specify will be linked.
 whitelist: false
-
+jedisAddress: 127.0.0.1
 # Here is the channel list
 channels:
   - mychannel
