--- a/pom.xml
+++ b/pom.xml
@@ -1,52 +1,89 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>HerochatBungeeBridge-Bungee</groupId>
-  <artifactId>HerochatBungeeBridge-Bungee</artifactId>
-  <version>0.1</version>
-  <build>
-    <sourceDirectory>src</sourceDirectory>
-    <plugins>
-      <plugin>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.1</version>
-        <configuration>
-          <source>1.7</source>
-          <target>1.7</target>
-        </configuration>
-      </plugin>
-    </plugins>
-    <finalName>HerochatBungeeBridgeBungee</finalName>
-    <resources>
-    <resource>
-    <directory></directory>
-    <includes>
-    <include>plugin.yml</include>
-    <include>config.yml</include> 
-    </includes>
-    </resource>
-    </resources>
-  </build>
-  <repositories>
-  <repository>
-    <id>craftminecraft-dev</id>
-    <url>http://repo.craftminecraft.net/content/groups/public/</url>
-  </repository>
-  <repository>
-      <id>snapshot-repo</id>
-      <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+<?xml version="1.0" encoding="UTF-8"?>
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<modelVersion>4.0.0</modelVersion>
+
+<groupId>HerochatBungeeBridge-Bungee</groupId>
+<artifactId>HerochatBungeeBridge-Bungee</artifactId>
+<version>1.0-SNAPSHOT</version>
+
+<repositories>
+    <repository>
+        <id>craftminecraft-dev</id>
+        <url>http://repo.craftminecraft.net/content/groups/public/</url>
+    </repository>
+    <repository>
+        <id>snapshot-repo</id>
+        <url>https://oss.sonatype.org/content/repositories/snapshots</url>
     </repository>
 </repositories>
+
+<distributionManagement>
+    <repository>
+        <id>upstream</id>
+        <name>greatmancode-releases</name>
+        <url>http://repo.greatmancode.com/content/repositories/releases</url>
+    </repository>
+    <snapshotRepository>
+        <id>upstream</id>
+        <name>greatmancode-snapshots</name>
+        <url>http://repo.greatmancode.com/content/repositories/snapshots</url>
+    </snapshotRepository>
+</distributionManagement>
+
 <dependencies>
-  <dependency>
-    <groupId>net.craftminecraft.bungee</groupId>
-    <artifactId>bungeeyaml</artifactId>
-    <version>1.2</version>
-  </dependency>
-  <dependency>
-      <groupId>net.md-5</groupId>
-      <artifactId>bungeecord-api</artifactId>
-      <version>1.6.4-SNAPSHOT</version>
-      <type>jar</type>
+    <dependency>
+        <groupId>net.craftminecraft.bungee</groupId>
+        <artifactId>bungeeyaml</artifactId>
+        <version>1.2</version>
+    </dependency>
+    <dependency>
+        <groupId>net.md-5</groupId>
+        <artifactId>bungeecord-api</artifactId>
+        <version>1.6.4-SNAPSHOT</version>
+        <type>jar</type>
+    </dependency>
+    <dependency>
+        <groupId>com.imaginarycode.minecraft</groupId>
+        <artifactId>RedisBungee</artifactId>
+        <version>0.2.3-SNAPSHOT</version>
     </dependency>
 </dependencies>
+<build>
+    <finalName>CaptureTheFlag</finalName>
+    <sourceDirectory>src/</sourceDirectory>
+    <defaultGoal>clean install</defaultGoal>
+    <resources>
+        <resource>
+            <targetPath>.</targetPath>
+            <filtering>true</filtering>
+            <directory>${basedir}</directory>
+            <includes>
+                <include>*.yml</include>
+                <include>*.info</include>
+                <include>*.inf</include>
+            </includes>
+        </resource>
+    </resources>
+    <plugins>
+        <!-- Compiler plugin -->
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-compiler-plugin</artifactId>
+            <version>2.4</version>
+            <configuration>
+                <source>1.6</source>
+                <target>1.6</target>
+                <compilerArguments>
+                    <O>-Xlint:all</O>
+                    <O>-Xlint:-path</O>
+                </compilerArguments>
+                <showWarnings>true</showWarnings>
+                <showDeprecation>true</showDeprecation>
+            </configuration>
+        </plugin>
+    </plugins>
+</build>
+
 </project>
