--- a/pom.xml
+++ b/pom.xml
@@ -36,7 +36,7 @@
     <dependency>
         <groupId>net.craftminecraft.bungee</groupId>
         <artifactId>bungeeyaml</artifactId>
-        <version>1.2</version>
+        <version>1.2.4-SNAPSHOT</version>
     </dependency>
     <dependency>
         <groupId>net.md-5</groupId>
