--- a/pom.xml
+++ b/pom.xml
@@ -51,7 +51,7 @@
     </dependency>
 </dependencies>
 <build>
-    <finalName>CaptureTheFlag</finalName>
+    <finalName>herochatBungeeBridge-Bungee</finalName>
     <sourceDirectory>src/</sourceDirectory>
     <defaultGoal>clean install</defaultGoal>
     <resources>
