--- a/pom.xml
+++ b/pom.xml
@@ -45,9 +45,9 @@
         <type>jar</type>
     </dependency>
     <dependency>
-        <groupId>com.imaginarycode.minecraft</groupId>
-        <artifactId>RedisBungee</artifactId>
-        <version>0.2.3-SNAPSHOT</version>
+        <groupId>org.mongodb</groupId>
+        <artifactId>mongo-java-driver</artifactId>
+        <version>2.11.3</version>
     </dependency>
 </dependencies>
 <build>
@@ -82,6 +82,33 @@
                 <showWarnings>true</showWarnings>
                 <showDeprecation>true</showDeprecation>
             </configuration>
+        </plugin>
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-shade-plugin</artifactId>
+            <version>2.1</version>
+            <executions>
+                <execution>
+                    <phase>package</phase>
+                    <goals>
+                        <goal>shade</goal>
+                    </goals>
+                    <configuration>
+                        <minimizeJar>true</minimizeJar>
+                        <artifactSet>
+                            <includes>
+                                <include>org.mongodb:mongo-java-driver</include>
+                            </includes>
+                        </artifactSet>
+                        <relocations>
+                            <relocation>
+                                <pattern>com.mongodb</pattern>
+                                <shadedPattern>com.jumanjicraft.BungeeChatClient.internal.com.mongodb</shadedPattern>
+                            </relocation>
+                        </relocations>
+                    </configuration>
+                </execution>
+            </executions>
         </plugin>
     </plugins>
 </build>
