--- a/pom.xml
+++ b/pom.xml
@@ -45,9 +45,9 @@
         <type>jar</type>
     </dependency>
     <dependency>
-        <groupId>org.mongodb</groupId>
-        <artifactId>mongo-java-driver</artifactId>
-        <version>2.11.3</version>
+        <groupId>com.rabbitmq</groupId>
+        <artifactId>amqp-client</artifactId>
+        <version>3.2.3</version>
     </dependency>
 </dependencies>
 <build>
